# lead-dev-bot

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  review_github_issues.py
.github/ISSUE_TEMPLATE/: bug_report.md  design-review-request.md  pull-request.md  task---chore.md
app/: main.py
app/templates/: lead_dev_prompt.j2
