[project]
name = "lead-dev-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cryptography==45.0.3",
    "deprecated==1.2.18",
    "dotenv==0.9.9",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "ollama==0.4.8",
    "pycparser==2.22",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pygithub==2.6.1",
    "pyjwt==2.10.1",
    "pynacl==1.5.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "ruff>=0.11.13",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uv==0.7.6",
    "uvicorn==0.34.2",
    "wrapt==1.17.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
